styles.css
/* Add any additional CSS styles here */
html,body {
    height: 100%;
    overflow-x: hidden;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Arial', sans-serif;
    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
    background-color: #ececec69;
    color: #000;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgb(0, 0, 0);
}

header {
    width: 100%;
    background-color: #000;
    padding: 20px;
    text-align: center;
}

.main-title {
    text-decoration: none;
    color: white;
    font-size: 1.5rem;
}
/* 
.home-hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
    background-color: red;
} */

.main-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: 100%;
    /* flex-grow: 1; */
    background-color: #acedff;
}

.cards-bg {
    /* background-color: rgb(99, 167, 255); */
    /* background-color: rgb(204, 211, 251); */
    /* background-color: rgb(173, 255, 101); */
    /* background-color: rgb(255, 116, 0); */
    background-color: #acedff;
    
}

section {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0;
    height: 100%;
    overflow: auto;
    /* padding: 5px 0; */
    scrollbar-width: none;
    /* background-color: rgb(99, 167, 255); */
}

section.business-cards {
    display: flex;
    justify-content: center; /* Center the cards horizontally */
    align-items: center; /* Center the cards vertically */
    flex-wrap: wrap; /* Allow cards to wrap to the next row on smaller screens */
     /*padding: 20px; Ensure proper spacing inside the section */
    max-width: 100%; /* Prevent overflow */
    overflow-x: scroll; /* Hide any horizontal overflow */
    scrollbar-width: none;
}

/* index.html */
.content-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 80%;
    height: 100%;
    /* overflow-y: scroll; */
    scrollbar-width: none;
    /* background-color: rgb(13, 255, 13); */
}

.content-container h2 {
    font-size: 2rem;
    text-align: center;
}

.content-container p {
    font-size: 1.5rem;
    letter-spacing: 1px;
    margin-top: 15px;
    /* background-color: white; */
    padding: 10px;
}

/* index-cards.html */
/* Carousel Wrapper */
.carousel-wrapper {
    position: relative;
    width: 100%;
    /* overflow: hidden; */
}

/* Arrows */
.carousel-btn {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: none;
    background: rgba(0, 0, 0, 0.6);
    color: white;
    font-size: 24px;
    cursor: pointer;
    transition: 0.3s;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
}

.carousel-btn:hover {
    background: rgba(0, 0, 0, 0.8);
}

/* Positioning */
.left {
    left: 10px;
}

.right {
    right: 10px;
}


.carousel {
    padding-left: 5px;
    display: flex;
    flex-direction: row;
    gap: 20px;
    width: 100%;
    transition: transform 0.1s ease-in-out;
}

.carousel::-webkit-scrollbar {
    display: none;
}


.card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* width: 300px; */
    width: 100%;
    /* max-height: 50vh; */
    height: 100%;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.308), 
    0 1px 3px rgba(0, 0, 0, 0.433);
    background-color: #242424;
    /* background-color: aqua; */
}

.card img {
    width: 100%;
    height: 100%;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.image-card-container {
    width: 350px;
    height: 250px;
}

.card-content {
    margin-bottom: 10px;
    width: 100%;
    padding: 0 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    /* max-height: 300px; */
    height: 100%;
    /* background-color: aqua; */
}

.card p {
    margin-top: 10px;
    font-size: 1rem;
    letter-spacing: 1px;
    overflow-y: scroll;
    scrollbar-width: none;
    padding: 5px;
    /* text-align: left; */
    border-radius: 2px;
    max-height: 300px;
    height: 100%;
    background-color: #3a3939;
    color: #f2f0f0;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
}

.business-name h2 {
    font-size: 1.6rem;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: rgb(255, 255, 255);
}

.business-name {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    text-align: center;
    /* max-height: 100px; */
    height: 80px;
    padding: 10px 0;
    /* background-color: #4caf50; */
    /* background-color: rgb(58, 58, 58); */

}

img.profile-picture {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    margin: 20px auto;
    display: block;
    /* background-color: #f3ef08; */
    background-color: #ffff21;
}

.site-button {
    text-decoration: none;
    padding: 5px;
    width: 100%;
    border: none;
    border-radius: 50px;
    font-size: 1.25rem;
    font-weight: 600;
    text-align: center;
    background-color: rgb(47, 78, 255);
    border: 2px solid rgb(47, 78, 255);
    color:white;
    text-transform: capitalize;
    transition: color 500ms;
    transition: background-color 500ms;
    &&:hover{
        background-color: rgb(255, 255, 255);
        border: 2px solid rgb(47, 78, 255);
        color: rgb(47, 78, 255);
    }
    &&:active{
        background-color: rgb(47, 78, 255);
        border: 2px solid white;
        color:white;
    }
}

/* ****************************Modal****************************/
.modal {
    display: none; /* Hidden by default */
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.94);
    background-color: rgba(255, 132, 0, 0.94);
    background-color: rgba(0, 0, 0, 0.892);
    justify-content: center;
    align-items: center;
}

.modal.active {
    display: flex; /* Display when active */
}

.modal-content {    
    position: relative;
    background-color: rgba(255, 115, 0, 0.593);
    background-color: rgba(0, 0, 0, 0);
    background-color: red;
    border-radius: 10px;
}

.btn-close {
    position: absolute;
    top: 1%;
    right: 1%;
    font-size: 6rem;
    font-weight: normal;
    color: rgb(68, 65, 65);
    cursor: pointer;
    background: rgba(89, 89, 89, 0);
    padding: 15px;
    line-height: .5;
    border: none;
    border-radius: 50%;
    z-index: 9999;
    transition: 0.3s;
    &&:hover{
        color: rgb(220, 220, 220);
        transform: scale(1.5);
    }
}

/****************************************************************/
.current-campaign {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 20px 0 10px;
}

.campaign {
    padding: 10px 20px;
    width: fit-content;
}

footer {
    width: 100%;
    background-color: #000;
    color: #fff;
    padding: 20px;
    text-align: center;
    /* border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px; */
}

.progress {
    height: 20px;
    background-color: #4caf50;
    transition: width 0.5s;
}

div#qr-code-container {
    position: absolute;
    top: 20%;
    display: flex;
    flex-direction: column;
    background-color: #0f1010;
}

img#qr-code {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

#qr-close-button {
    border: 0px;
    border-radius: 20px;
    padding: 4px;
    background-color: rgb(97, 97, 97);
    color: rgb(247, 247, 247);
    transition: background-color 500ms;
    &&:hover {
    background-color: rgb(171, 170, 170);
    }
    &&:active {
    background-color: rgb(97, 97, 97);
    }
}

#share-button {
    margin-top: 10px;
}

/***********************Media Queries*************************/
@media (max-height: 699px) {
    /* Styles for devices with a height less than 700px */
    /* .modal-content {
        transform: scale(.8);
    } */

    .image-card-container {
        width: 250px;
        height: 150px;
    }
    
    .card-content {
        max-height: 250px;
        height: 100%;
    }

    .business-name {
        max-height: 75px;
    }


    .content-container {
        width: 95%;
        justify-content: start;
        /* background-color: green; */
    }

    .content-container h2 {
        font-size: 1.7rem;
    }
}

@media (min-width: 601px) {
    .modal-content .card {
        transform: scale(1.3);
    }
}

@media screen and (max-width: 600px) {

    .main-title {
        font-size: 1rem;
    }
    
    .modal-content {
        width: 100%;
        margin: 0 10px;
    }

    .image-card-container {
        width: 300px;
        height: 200px;
    }

    img.profile-picture {
        width: 100px;
        height: 100px;
    }

    .card-content {
        max-height: 250px;
        height: 100%;
    }

    .business-name {
        height: 75px;
    }

    .business-name h2 {
        font-size: 1.4rem;
    }

    .content-container {
        width: 95%;
        justify-content: start;
        /* background-color: green; */
    }

    .content-container h2 {
        font-size: 1.7rem;
    }

    .content-container p {
        font-size: 1.2rem;
    }

    .btn-close {
        padding: 4px;
        top: 1%;
        right: 1%;
        font-size: 5rem;
    }

}

@media screen and (max-width: 420px) {

    .main-title {
        font-size: .9rem;
    }

    .main-container {
        height: 100%;
    }

    
    .image-card-container {
        width: 300px;
        height: 200px;
    }

    .card-content {
        max-height: 250px;
        height: 100%;
    }

    
}

@media screen and (max-width: 320px) {
    
    header {
        padding: 10px;
    }

    .main-title {
        font-size: .75rem;
    }

    .modal-content {
        transform: scale(1);
    }
    
    .carousel {
        padding-left: 0;
    }
    
    .card-content {
        max-height: 200px;
        height: 100%;
    }

    .content-container p {
        font-size: 1.3rem;
    }

    .image-card-container {
        width: 200px;
        height: 150px;
    }

    .card p {
        font-size: .8rem;
        line-height: 1.3;
        letter-spacing: 1.2px;
    }
    
    .business-name {
        max-height: 60px;
    }

    .business-name h2 {
        font-size: 1rem;
    }

    .site-button {
        padding: 3px;
        font-size: 1rem;
        letter-spacing: 1px;
    }

    .campaign {
        padding: 4px 8px;
    }

    footer {
        padding: 10px;
    }
}

